--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 </head>
 <body>
     <header>
+         <a href="index.html">
         <img src="logo.png" alt="THQ Logo">
+         </a>
         <h1>Welcome to THQ Cyber Division</h1>
     </header>
     <nav>
