--- a/about.html
+++ b/about.html
@@ -74,7 +74,9 @@
 </head>
 <body>
     <header>
+	     <a href="index.html">
         <img src="logo.png" alt="THQ Logo">
+	     </a>
         <h1>About Us - THQ Cyber Division</h1>
     </header>
     <nav>
