--- a/services.html
+++ b/services.html
@@ -75,7 +75,9 @@
 </head>
 <body>
     <header>
+         <a href="index.html">
         <img src="logo.png" alt="THQ Logo">
+         </a>
         <h1>Our Services</h1>
     </header>
     <nav>
