--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - THQ Cyber Division Unincorporated</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="assets/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="assets/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon_96x96.png">
     <style>
         body {
             font-family: Arial, sans-serif;
