--- a/services.html
+++ b/services.html
@@ -103,6 +103,7 @@
             <li><strong>Remote Support:</strong> Expert technical support at your convenience, wherever you are.</li>
 
         </ul>
+	<p>Please support our ebooks by making a donation. BTC :  1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro, your support will be valuble.</p>
     </main>
     <footer>
         <p>&copy; 2024 THQ Cyber Division Unincorporated. All rights reserved.</p>
