--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="THQ Cyber Division Unincorporated is a leading IT solutions provider offering innovative, secure, and efficient technology services for businesses of all sizes. Empower your business with our expertise.">
+    <meta name="keywords" content="THQ Cyber Division, IT solutions, technology services, digital transformation, cybersecurity, innovative IT services">
+    <meta name="author" content="THQ Cyber Division Unincorporated">
     <title>Home - THQ Cyber Division Unincorporated</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
