--- a/services.html
+++ b/services.html
@@ -114,6 +114,7 @@
 
         </ul>
 	<p>Please support our ebooks by making a donation. BTC :  1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro, your support will be valuable.</p>
+	<p>Your contribution will help our members obtain residency in other friendly countries and help them reach their full potential</p>
     </main>
     <footer>
         <p>&copy; 2024 THQ Cyber Division Unincorporated. All rights reserved.</p>
