--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 THQ Cyber Division Unincorporated. All rights reserved.</p>
+        <p>&copy; 2024 -2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
             <img src="email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
