--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
         <p>To be a globally recognized IT solutions leader, renowned for our commitment to innovation, quality, and exceptional client service.</p>
     </main>
     <footer>
-        <p>&copy; 2024 THQ Cyber Division Unincorporated. All rights reserved.</p>
+        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
             <img src="email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
