--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
 	<p>Your contribution will help our members obtain residency in other friendly countries and help them reach their full potential</p>
     </main>
     <footer>
-        <p>&copy; 2024 THQ Cyber Division Unincorporated. All rights reserved.</p>
+        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
             <img src="email-icon.png" alt="Email Icon" title="Send us an email">
         </a>
