--- a/services.html
+++ b/services.html
@@ -124,11 +124,12 @@
             <li><strong>Remote Support:</strong> Expert technical support at your convenience, wherever you are.</li>
 
         </ul>
-	<p>Please support our ebooks by making a donation.
-		BTC :  1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro,
-		ETH/ERC20 contracts: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1,
-		your support will be valuable.</p>
-	<p>Your contribution will help our members obtain residency in other friendly countries and help them reach their full potential</p>
+	<p>Please support our ebooks by making a donation.</p>
+	    <ul>
+		    <li><b>BTC</b>: 1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro</li>
+		    <li><b>ETH/ERC20 contracts</b>: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1</li>
+	    </ul>
+	<p>Your contribution will be valuable.</p>
     </main>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
