--- a/services.html
+++ b/services.html
@@ -126,8 +126,8 @@
         </ul>
 	<p>Please support our ebooks by making a donation.</p>
 	    <ul>
-		    <li><b>BTC</b>: 1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro</li>
-		    <li><b>ETH/ERC20 contracts</b>: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1</li>
+		    <li><i>BTC</i>: 1PZuN79uczZ6YHYdqBD1jDoPG3QVBD33ro</li>
+		    <li><i>ETH/ERC20 contracts</i>: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1</li>
 	    </ul>
 	<p>Your contribution will be valuable.</p>
     </main>
