--- a/index.html
+++ b/index.html
@@ -273,8 +273,12 @@
                     <img src="book2-icon.png" alt="Ebook Icon">
                     <span>Cryptography Unveiled: Privacy Techniques for the Virtual World</span>
                     <div class="icons">
+                        <a href="https://ipfs.io/ipfs/QmcvL5WBq8eNDCYqy1XZhcGPY7KJQbQ5Rp1GWptuzbD89X" target="_blank">
                         <img src="pdf-icon.png" alt="PDF Icon" class="icon">
+			</a>
+                        <a href="https://ipfs.io/ipfs/QmP9xFwakZGKSbyvmAnSuV3uiLk8zgdZChrUoyWJee53vA" target="_blank">
                         <img src="epub-icon.png" alt="EPUB Icon" class="icon">
+			</a>
                     </div>
                 </li>
                 <!-- More books can be added here -->
