--- a/about.html
+++ b/about.html
@@ -12,24 +12,52 @@
     <script>
         // Register the service worker
 	if ('serviceWorker' in navigator) {
-	  navigator.serviceWorker.register('/service-worker.js').then(() => {
+	  navigator.serviceWorker.register('/service-worker.js').then((registration) => {
 	    console.log('Service Worker registered');
+	    
+	    // Listen for updates to the service worker
+	    registration.addEventListener('updatefound', () => {
+	      const newWorker = registration.installing;
+	      newWorker.addEventListener('statechange', () => {
+	        if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+	          alert('A new version is available. Please refresh the page.');
+	        }
+	      });
+	    });
 	  }).catch((error) => {
 	    console.error('Service Worker registration failed:', error);
 	  });
 	}
 	
-	// Fetch API data
+	// Detect online/offline status and display notification
+	const statusElement = document.getElementById('status');
+	function updateOnlineStatus() {
+	  const isOnline = navigator.onLine;
+	  statusElement.textContent = isOnline ? 'You are online' : 'You are offline';
+	  if (!isOnline) {
+	    alert('You are offline. The app will continue to work with cached data.');
+	  }
+	}
+	window.addEventListener('online', updateOnlineStatus);
+	window.addEventListener('offline', updateOnlineStatus);
+	updateOnlineStatus();
+	
+	// Fetch data function
 	const dataElement = document.getElementById('data');
-	fetch('https://jsonplaceholder.typicode.com/posts/1')
-	  .then((response) => response.json())
-	  .then((data) => {
-	    dataElement.textContent = `Title: ${data.title}`;
-	  })
-	  .catch((error) => {
-	    dataElement.textContent = 'Failed to fetch data.';
-	    console.error('Fetch error:', error);
-	  });
+	document.getElementById('refresh').addEventListener('click', fetchData);
+	
+	function fetchData() {
+	  fetch('https://jsonplaceholder.typicode.com/posts/1')
+	    .then((response) => response.json())
+	    .then((data) => {
+	      dataElement.textContent = `Title: ${data.title}`;
+	    })
+	    .catch((error) => {
+	      dataElement.textContent = 'Failed to fetch data. You are offline.';
+	      console.error('Fetch error:', error);
+	    });
+	}
+	
 
     </script>
     <title>About Us - THQ Cyber Division Unincorporated</title>
