--- a/index.html
+++ b/index.html
@@ -241,6 +241,21 @@
             background-color: #0056b3;
         }
 
+	.show-projects-btn {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.1em;
+            margin-top: 20px;
+            display: inline-block;
+        }
+        .show-projects-btn:hover {
+            background-color: #0056b3;
+        }
+
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .modal-content {
