--- a/index.html
+++ b/index.html
@@ -354,24 +354,40 @@
                 <button onclick="closeProjectsModal()">Close</button>
             </div>
             <ul class="project-list">
-                <li class="project-item" onclick="showProjectDetails('Project 1')">
+                <li class="project-item" onmouseover="showProjectInfo('Project 1')" onmouseout="hideProjectInfo()">
                     <img src="project1-thumbnail.jpg" alt="Project Thumbnail">
-                    <span>Project 1: WebAid for NPOs</span>
-                    <button class="donate-btn">Donate</button>
+                    <span>Project 1: Digital Education Initiative</span>
+                    <button class="donate-btn" onclick="showQRCode('ETH_Address_1')">Donate</button>
+                    <div class="project-hover-info" id="Project 1" style="display:none;">
+                        <p>Target: $1000</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 50%;"></div>
+                        </div>
+                    </div>
                 </li>
-                <li class="project-item" onclick="showProjectDetails('Project 2')">
+                <li class="project-item" onmouseover="showProjectInfo('Project 2')" onmouseout="hideProjectInfo()">
                     <img src="project2-thumbnail.jpg" alt="Project Thumbnail">
                     <span>Project 2: Green Energy Research</span>
-                    <button class="donate-btn">Donate</button>
+                    <button class="donate-btn" onclick="showQRCode('ETH_Address_2')">Donate</button>
+                    <div class="project-hover-info" id="Project 2" style="display:none;">
+                        <p>Target: $1500</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 20%;"></div>
+                        </div>
+                    </div>
                 </li>
-                <!-- More projects can be added here -->
-		<!-- New Project -->
-                <li class="project-item" onclick="showProjectDetails('WebAid for NPOs')">
+                <!-- New Project -->
+                <li class="project-item" onmouseover="showProjectInfo('WebAid for NPOs')" onmouseout="hideProjectInfo()">
                     <img src="project3-thumbnail.jpg" alt="Project Thumbnail">
                     <span>WebAid for NPOs: Empowering Non-Profits with Technology</span>
-                    <button class="donate-btn">Donate</button>
+                    <button class="donate-btn" onclick="showQRCode('ETH_Address_3')">Donate</button>
+                    <div class="project-hover-info" id="WebAid for NPOs" style="display:none;">
+                        <p>Target: $2000</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 0%;"></div>
+                        </div>
+                    </div>
                 </li>
-            </ul>
 
             <div id="projectDetails" style="display:none;">
                 <h3>Project Details</h3>
@@ -381,6 +397,11 @@
                 <ul id="fundraisingDetails">
                     <!-- Additional details to be added dynamically -->
                 </ul>
+            </div>
+		  <div id="qrCodeModal" style="display:none;">
+                	<h3>Scan to Donate</h3>
+                	<img src="eth_qr_code.png" alt="Ethereum QR Code">
+                <button onclick="closeQRCode()">Close</button>
             </div>
         </div>
     </div>
@@ -403,49 +424,43 @@
         function closeModal() {
             document.getElementById('ebooksModal').style.display = 'none';
         }
-	function openProjectsModal() {
+        function openProjectsModal() {
             document.getElementById('projectsModal').style.display = 'flex';
         }
 
         function closeProjectsModal() {
             document.getElementById('projectsModal').style.display = 'none';
-            document.getElementById('projectDetails').style.display = 'none';
+            document.getElementById('qrCodeModal').style.display = 'none';
         }
 
-        function showProjectDetails(projectName) {
-            document.getElementById('projectName').textContent = projectName;
-            // Simulate fetching the fundraising details for the selected project
-            const fundraisingDetails = document.getElementById('fundraisingDetails');
-            fundraisingDetails.innerHTML = '';
-            if (projectName === 'Project 1') {
-                document.getElementById('raisedAmount').textContent = '500';
-                const details = ['We plan to host fundraising events, crowdfunding campaigns, and partner with organizations to drive donations.'];
-                details.forEach(detail => {
-                    const li = document.createElement('li');
-                    li.textContent = detail;
-                    fundraisingDetails.appendChild(li);
-                });
-            } else if (projectName === 'Project 2') {
-                document.getElementById('raisedAmount').textContent = '300';
-                const details = ['Research grants, donations from individuals, and support from green energy companies will fund this project.'];
-                details.forEach(detail => {
-                    const li = document.createElement('li');
-                    li.textContent = detail;
-                    fundraisingDetails.appendChild(li);
-                });
-            } else if (projectName === 'WebAid for NPOs') {
-                document.getElementById('raisedAmount').textContent = '0';
-                const details = [
-                    'We aim to provide affordable, customizable, and easy-to-manage websites for NPOs.',
-                    'Our fundraising efforts will focus on donations, corporate sponsorships, and grants for web development.'
-                ];
-                details.forEach(detail => {
-                    const li = document.createElement('li');
-                    li.textContent = detail;
-                    fundraisingDetails.appendChild(li);
-                });
+        function showProjectInfo(projectId) {
+            document.getElementById(projectId).style.display = 'block';
+        }
+
+        function hideProjectInfo() {
+            const projectInfo = document.querySelectorAll('.project-hover-info');
+            projectInfo.forEach(info => {
+                info.style.display = 'none';
+            });
+        }
+
+        function showQRCode(address) {
+            // Logic to show the QR code for the selected ETH address
+            const qrCodeModal = document.getElementById('qrCodeModal');
+            qrCodeModal.style.display = 'block';
+            // You can replace the QR code image based on the ETH address here
+            const qrCodeImage = document.querySelector('#qrCodeModal img');
+            if (address === 'ETH_Address_1') {
+                qrCodeImage.src = 'eth_qr_code_1.png';
+            } else if (address === 'ETH_Address_2') {
+                qrCodeImage.src = 'eth_qr_code_2.png';
+            } else if (address === 'ETH_Address_3') {
+                qrCodeImage.src = 'eth_qr_code_3.png';
             }
-            document.getElementById('projectDetails').style.display = 'block';
+        }
+
+        function closeQRCode() {
+            document.getElementById('qrCodeModal').style.display = 'none';
         }
     </script>
 </body>
