--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             align-items: center;
         }
         .modal-header button {
-            background-color: red;
+            background-color: blue;
             color: white;
             padding: 5px 10px;
             border: none;
